infrastructure/karma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: karma
  namespace: monitoring
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: karma
